# buddy_alloc_for_xv6

./: .gitignore  CMakeLists.txt  Makefile  README
kernel/: buddy_alloc.c  buddy_alloc.h  defs.h  kalloc.c  main.c  pipe.c  pipe.h  proc.h  slab_alloc.c  slab_alloc.h  syscall.c  syscall.h  virtio_disk.c
lib/buddy_alloc/: CMakeLists.txt  buddy_alloc.c  buddy_alloc.h
lib/slab_alloc/: CMakeLists.txt  slab_alloc.c  slab_alloc.h
test/: buddy_alloc.c  buddy_alloc.h  test.cpp  test_buddy.cpp  test_slab.cpp
user/: buddy_info.c  user.h  usys.pl
